--- a/src/Tests/dotnet-msbuild.Tests/dotnet-msbuild.Tests.csproj
+++ b/src/Tests/dotnet-msbuild.Tests/dotnet-msbuild.Tests.csproj
@@ -10,8 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Microsoft.DotNet.Tools.Tests.Utilities\Microsoft.DotNet.Tools.Tests.Utilities.csproj" />
-    <ProjectReference Include="..\..\src\dotnet\dotnet.csproj" />
+    <ProjectReference Include="..\Microsoft.NET.TestFramework\Microsoft.NET.TestFramework.csproj" />
   </ItemGroup>
 
 </Project>
