--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -1,21 +1,33 @@
 trigger:
 - master
 - release/*
+- internal/release/3.*
 
 variables:
-  _TeamName: Roslyn-Project-System
-  _DotNetArtifactsCategory: Toolset
-  ${{ if eq(variables['System.TeamProject'], 'public') }}:
-    PB_PublishBlobFeedKey:
-    PB_PublishBlobFeedUrl:
-    _DotNetPublishToBlobFeed: false
-    _PublishUsingPipelines: false
-    _PublishType: none
-  ${{ if ne(variables['System.TeamProject'], 'public') }}:
-    PB_PublishBlobFeedUrl: https://dotnetfeed.blob.core.windows.net/dotnet-toolset/index.json
-    _DotNetPublishToBlobFeed: true
-    _PublishUsingPipelines: true
-    _PublishType: blob
+  - name: _TeamName
+    value: Roslyn-Project-System
+  - name: _DotNetArtifactsCategory
+    value: Toolset
+  - ${{ if or(eq(variables['System.TeamProject'], 'public'), in(variables['Build.Reason'], 'PullRequest')) }}:
+    - name: PB_PublishBlobFeedKey
+      value: ''
+    - name: PB_PublishBlobFeedUrl
+      value: ''
+    - name: _DotNetPublishToBlobFeed
+      value: false
+    - name: _PublishUsingPipelines
+      value: false
+    - name: _PublishType
+      value: none
+  - ${{ if and(ne(variables['System.TeamProject'], 'public'), notin(variables['Build.Reason'], 'PullRequest')) }}:
+    - name: PB_PublishBlobFeedUrl
+      value: https://dotnetfeed.blob.core.windows.net/dotnet-toolset/index.json
+    - name: _DotNetPublishToBlobFeed
+      value: true
+    - name: _PublishUsingPipelines
+      value: true
+    - name: _PublishType
+      value: blob
 
 stages:
 - stage: build
@@ -27,7 +39,7 @@ stages:
         name: Hosted VS2017
       strategy:
         matrix:
-          ${{ if eq(variables['System.TeamProject'], 'public') }}:
+          ${{ if or(eq(variables['System.TeamProject'], 'public'), in(variables['Build.Reason'], 'PullRequest')) }}:
             Build_Debug_x86:
               _BuildConfig: Debug
               _BuildArchitecture: x86
@@ -35,7 +47,7 @@ stages:
             _BuildConfig: Release
             _BuildArchitecture: x64
 
-  - ${{ if eq(variables['System.TeamProject'], 'public') }}:
+  - ${{ if or(eq(variables['System.TeamProject'], 'public'), in(variables['Build.Reason'], 'PullRequest')) }}:
     - template: /eng/build.yml
       parameters:
         agentOs: Linux
