--- a/src/Tests/Microsoft.NET.TestFramework/Microsoft.NET.TestFramework.csproj
+++ b/src/Tests/Microsoft.NET.TestFramework/Microsoft.NET.TestFramework.csproj
@@ -19,7 +19,7 @@
     -->
     <IsTestProject>false</IsTestProject>
     
-    <TargetFramework>$(SdkTargetFramework)</TargetFramework>
+    <TargetFrameworks>$(SdkTargetFramework);net472</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
