--- a/eng/build.yml
+++ b/eng/build.yml
@@ -139,7 +139,7 @@ jobs:
             WorkItemCommand: '%HELIX_CORRELATION_PAYLOAD%\build\RunPerfTestsOnHelix.cmd $(_BuildConfig) $(_PerfIterations) $(Build.SourceVersion) $(Build.SourceBranchName) rolling false Windows.10.Amd64.ClientRS1.Perf $(Build.BuildNumber) '
             CorrelationPayloadDirectory: '$(Build.SourcesDirectory)\helix-package'
             HelixConfiguration: 'CoreMSBuild'
-            condition: ne(variables['Test'], 'false')
+            continueOnError: true
         - task: PublishBuildArtifacts@1
           inputs:
             pathtoPublish: $(Build.SourcesDirectory)\artifacts\log
@@ -165,7 +165,7 @@ jobs:
             WorkItemCommand: '%HELIX_CORRELATION_PAYLOAD%\build\RunPerfTestsOnHelix.cmd $(_BuildConfig) $(_PerfIterations) $(Build.SourceVersion) $(Build.SourceBranchName) rolling true Windows.10.Amd64.ClientRS1.Perf $(Build.BuildNumber)'
             CorrelationPayloadDirectory: '$(Build.SourcesDirectory)\helix-package'
             HelixConfiguration: 'FullMSBuild'
-            condition: ne(variables['Test'], 'false')
+            continueOnError: true
         - task: PublishBuildArtifacts@1
           inputs:
             pathtoPublish: $(Build.SourcesDirectory)\artifacts\log
@@ -185,7 +185,7 @@ jobs:
             WorkItemTimeout: 2:00
             WorkItemDirectory: '$(Build.SourcesDirectory)'
             WorkItemCommand: './build/RunPerfTestsOnHelix.sh $(_BuildConfig) $(_PerfIterations) $(Build.SourceVersion) $(Build.SourceBranchName) rolling x64 Ubuntu_16.04 Ubuntu.1604.Amd64.Perf $(Build.BuildNumber)'
-            condition: ne(variables['Test'], 'false')
+            continueOnError: true
 
     - ${{ if notIn(parameters.agentOs, 'Windows_NT', 'Windows_NT_FullFramework', 'Windows_NT_TestAsTools', 'Windows_Perf_CI', 'Linux_Perf_CI', 'Windows_Perf_Helix', 'Windows_Perf_CI_FullFramework', 'Windows_Perf_Helix_Fullframework', 'Linux_Perf_Helix') }}:
       - script: eng/common/cibuild.sh 
